--- a/statefulsets/consul.yaml
+++ b/statefulsets/consul.yaml
@@ -76,7 +76,7 @@ spec:
     - metadata:
         name: data
         annotations:
-          volume.alpha.kubernetes.io/storage-class: anything
+          volume.beta.kubernetes.io/storage-class: default
       spec:
         accessModes:
           - ReadWriteOnce
